appId: host.exp.exponent
---
- launchApp:
    clearState: true
- assertVisible: "Login"
- tapOn: "Login"
- assertVisible: "Home"
